added footer section

--- a/index.html
+++ b/index.html
@@ -6,16 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Donate for humanity</title>
     <link rel="stylesheet" type="text/css" href="style/donate.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Inter&family=Open+Sans&family=Poppins&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Inter&family=Lobster&family=Open+Sans&family=Poppins&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="header">
         <h1 class="header-title">Let’s Help Those Who Are<br>More In Need</h1>
         <p class="header-text">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
-        <button class="donate-now" type="submit">Donate now</button>
+        <button class="donate-btn" type="submit">Donate now</button>
     </header>
     
     <main>
+        <!-- Donate Amount -->
         <section class="donate-amount">
             <h2>Donate Today</h2>
             <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
@@ -27,8 +28,10 @@
                 <div>500$</div>
             </div>
             <p>Other Amount ($)</p>
-            <button class="donate-now" type="submit">Donate now</button>
+            <button class="donate-btn" type="submit">Donate now</button>
         </section>
+
+        <!-- Donate plan scetion -->
 
         <section class="donate-plan">
             <h2>Our Donate Plan</h2>
@@ -51,6 +54,54 @@
                 </div>
             </div>
         </section>
+
+        <!-- Contribution Section -->
+
+        <section class="contribute">
+            <div class="contribution">
+                <div class="cont-text">
+                    <h3>Their lives depend on<br>your donation</h3>
+                    <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
+                    <br>
+                    <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset.
+                    </p>
+                    <button class="contrbute-btn" type="submit">How to Contribute?</button>
+                </div>
+                <div class="cont-img">
+                    <img src="/images/donation0.jpg" alt="">
+                </div>
+            </div>
+            <div class="contribution">
+                <div class="cont-img">
+                    <img src="/images/donation1.jpg" alt="">
+                </div>
+                <div class="cont-text">
+                    <h3>They need us<br>to suvive</h3>
+                    <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
+                    <br>
+                    <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset.
+                    </p>
+                    <button class="contrbute-btn" type="submit">How to Contribute?</button>
+                </div>
+            </div>
+        </section>
+
+        <!-- Update Scrtion -->
+
+        <section class="update">
+            <h2>Get My Updates</h1>
+            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli<br>deterruisset. No duo populo animal noluisse, enim</p>
+            <div class="email-with-button">
+                <div><input type="email" placeholder="Email"></div>
+                <div><button class="subscribe-btn"><a href="#" class="">Subscribe</a></button></div>
+            </div>
+        </section>
     </main>
+
+    <!-- footer section -->
+    <footer>
+        <h3 class="footer-title">Be Humble</h3>
+        <p class="footer-text">I’m gonna do it</p>
+    </footer>
 </body>
 </html>
