added image value

--- a/index.html
+++ b/index.html
@@ -21,13 +21,15 @@
             <h2>Donate Today</h2>
             <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
             <div class="amounts">
-                <div>10$</div>
-                <div>20$</div>
-                <div>50$</div>
-                <div>100$</div>
-                <div>500$</div>
+                <div class="doller">10$</div>
+                <div class="doller">20$</div>
+                <div class="doller">50$</div>
+                <div class="doller">100$</div>
+                <div class="doller">500$</div>
             </div>
-            <p>Other Amount ($)</p>
+            <input type="number" name="" id="" placeholder="Other Amount ($)">
+            <hr>
+            <br>
             <button class="donate-btn" type="submit">Donate now</button>
         </section>
 
@@ -68,12 +70,12 @@
                     <button class="contrbute-btn" type="submit">How to Contribute?</button>
                 </div>
                 <div class="cont-img">
-                    <img src="/images/donation0.jpg" alt="">
+                    <img src="images/donation0.jpg" alt="">
                 </div>
             </div>
             <div class="contribution">
                 <div class="cont-img">
-                    <img src="/images/donation1.jpg" alt="">
+                    <img src="images/donation1.jpg" alt="">
                 </div>
                 <div class="cont-text">
                     <h3>They need us<br>to suvive</h3>
@@ -92,8 +94,8 @@
             <h2>Get My Updates</h1>
             <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli<br>deterruisset. No duo populo animal noluisse, enim</p>
             <div class="email-with-button">
-                <div><input type="email" placeholder="Email"></div>
-                <div><button class="subscribe-btn"><a href="#" class="">Subscribe</a></button></div>
+                <input type="email" id="email" placeholder="Email">
+                <button class="subscribe-btn"><a href="#" class="">Subscribe</a></button>
             </div>
         </section>
     </main>
