update section fixing

--- a/index.html
+++ b/index.html
@@ -93,9 +93,13 @@
         <section class="update">
             <h2>Get My Updates</h1>
             <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli<br>deterruisset. No duo populo animal noluisse, enim</p>
-            <div class="email-with-button">
-                <input type="email" id="email" placeholder="Email">
-                <button class="subscribe-btn"><a href="#" class="">Subscribe</a></button>
+            <div class="update-section">
+                <div class="email-with-button">
+                    <form action="">
+                        <input type="email" id="email" placeholder="Email">
+                        <input type="submit" id="subscribe-btn" value="Subscribe">
+                    </form>
+                </div>
             </div>
         </section>
     </main>
