added amount styles

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
             <h2>Donate Today</h2>
             <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
             <div class="amounts">
-                <div class="doller">10$</div>
-                <div class="doller">20$</div>
-                <div class="doller">50$</div>
-                <div class="doller">100$</div>
-                <div class="doller">500$</div>
+                <div class="doller"><p>10$</p></div>
+                <div class="doller"><p>20$</p></div>
+                <div class="doller"><p>50$</p></div>
+                <div class="doller"><p>100$</p></div>
+                <div class="doller"><p>500$</p></div>
             </div>
             <input type="number" name="" id="" placeholder="Other Amount ($)">
             <hr>
